--- a/Assignment2/nbproject/project.properties
+++ b/Assignment2/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Assignment2
-main.class=ui.MainJFrame
+main.class=ui.WelcomePageJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
